frontend/src/views/searchView/styles.module.less
@import '~@bit/boclips.boclips-ui.styles.styles/_colours';

.videoCardWrapper {
  position: relative;
  z-index: 1;
  background: @shade-1;
  min-height: 100%;
  padding: 0 50px;
}

.mainBeforeSearch{
  background:#ffffff;
  min-height:803px;
}

.filtersAlign{
  display: flex;
  justify-content: center;
}

.layoutHeader,
.layoutHeaderBeforeSearch {
  padding: 0 0 20px 0;
  line-height: 24px;
  height: auto;
  display: flex;
  flex-direction: column;
  background-color: white;
  position: relative;
  z-index: 2;
}

.layoutHeader{
  box-shadow: 0 4px 13px 0 rgba(204, 219, 237, 0.5);
}

.searchBar {
  justify-content: center;

  &.filtersButton {

    .searchBarContainer {
      display: flex;
      max-width: 975px;
      width: 100%;

      & > :first-child {
        width: calc(100% - 203px);
      }
    }
  }
}

.numberOfResults {
  font-family: var(--fontFamily);
  display: flex;
  justify-content: center;

  span {
    width: 977px;
    font-size: 18px;
    font-weight: 500;
    letter-spacing: 0;
    line-height: 24px;
    color: #434557;
    margin-top: 20px;
    margin-bottom: 13px;
  }
}

.pagination {
  display: flex;
  justify-content: center;
  padding-bottom: 12px;

  li {
    font-size: 16px;
    font-weight: bold;
    border: 2px solid @shade-6;
    background: transparent;
    border-radius: 8px;

    :global .ant-pagination-item-link {
      border: 0;
      background: none;
    }

    svg {
      position: relative;
      top: -4px;
      height: 11px;
      fill: @shade-6;
    }
  }

  :global .ant-pagination-jump-next,
  :global .ant-pagination-jump-prev {
    border: none;

    :hover {
      svg {
        fill: @blue-shade-4;
      }
    }
  }

  :global .ant-pagination-disabled {
    opacity: 0.5;
  }

  :global .ant-pagination-next,
  :global .ant-pagination-prev,
  :global .ant-pagination-item-ellipsis {
    &:hover {
      border-color: @blue-shade-4;

      svg {
        fill: @blue-shade-4;
      }
    }
  }

  :global .ant-pagination-item-active {
    border-color: @blue-shade-4;

    a {
      color: @blue-shade-4;
    }
  }
}

.spinner {
  min-height: 480px;
}

.paginationEmpty {
  display: none;
}

